# registry-platform

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/migrations/: README  env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schema.py  0002_registry_sources.py  0003_enrich_registry_sources.py  0004_address_supporting_information.py  0005_ingestion_checkpoints_and_dedup.py
backend/src/registry/: cli.py  config.py  enrichment.py  services.py  source_inventory.py  spatial.py
backend/src/registry/api/: __init__.py  main.py
backend/src/registry/api/routes/: __init__.py  addresses.py  ingest.py  registrants.py  sources.py  spatial.py
backend/src/registry/db/: __init__.py  session.py
backend/src/registry/geocode/: __init__.py
backend/src/registry/models/: __init__.py  common.py  enrichment.py  ingestion.py  registrant.py  source_inventory.py
backend/src/registry/normalize/: __init__.py
backend/src/registry/schemas/: __init__.py  ingestion.py  registrant.py  spatial.py
backend/src/registry/sources/: __init__.py  base.py  persistence.py  registry.py
backend/src/registry/sources/states/: __init__.py  california.py  florida.py  iowa.py  michigan.py  minnesota.py  missouri.py  nebraska.py  north_carolina.py  north_dakota.py  south_dakota.py  texas.py  wisconsin.py
backend/tests/: test_enrichment.py  test_functional_end_to_end.py  test_health.py  test_ingestion_pipeline.py  test_source_inventory.py  test_sources.py  test_spatial.py
docs/: state-registry-access.md
(+29 files in other folders)
