[project]
name = "registry-platform-backend"
version = "0.1.0"
description = "Skeleton backend for a unified U.S. sex offender registry data platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.9.0",
  "alembic>=1.16.0",
  "fastapi>=0.116.0",
  "geoalchemy2>=0.17.1",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.0",
  "sqlmodel>=0.0.24",
  "typer>=0.16.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[project.scripts]
registry = "registry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
